# mechforge

./: AI-in-mechanical-design.md  README.md
OneDrive/mechforge_ai/: OPTIMIZATION_REPORT_3.md  README.md  pyproject.toml
OneDrive/mechforge_ai/.github/workflows/: ci.yml
OneDrive/mechforge_ai/docker/: docker-compose.yml  manage-solver.bat  nginx.conf  setup-solver.bat  setup.sh
OneDrive/mechforge_ai/docker/calculix-solver/: solver_api.py
OneDrive/mechforge_ai/docker/calcx-solver/: Dockerfile
OneDrive/mechforge_ai/docs/: user-guide.md
OneDrive/mechforge_ai/test_models/: test_bracket.step
OneDrive/mechforge_ai/tests/: test_mesh_engine.py  test_solver_engine.py
mechforge_ai/: DEV_LOG.md  QWEN.md  README.md  __init__.py  config.py  config.yaml  index.html  knowledge_cli.py  knowledge_wrapper.py  main_cli.py  main_wrapper.py  mechforge-ai  mechforge-ai.bat  mechforge-ai.cmd  mechforge-k  mechforge-k.bat  mechforge-k.cmd  mechforge-work.cmd  pyproject.toml  run_knowledge.py  run_main.py  run_work.py  work_wrapper.py
mechforge_ai/assets/images/: generate_all.py  generate_images.py
mechforge_ai/assets/logo/: README.md  convert_to_png.py  create_png_logo.py  preview.html
mechforge_ai/chat/: __init__.py  command_handler.py  llm_client.py  rag_engine.py  terminal.py  ui_renderer.py
mechforge_ai/knowledge/: __init__.py  config.py  lookup.py  rag.py
mechforge_ai/mechforge_ai/: __init__.py  command_handler.py  llm_client.py  terminal.py
mechforge_ai/mechforge_knowledge/: lookup.py
mechforge_ai/mechforge_theme/: components.py
mechforge_ai/mechforge_web/: api.py  main.py  middleware.py
mechforge_ai/mechforge_work/: work_cli.py
mechforge_ai/prompts/: __init__.py  mechanical.md
mechforge_ai/tests/: test_core_features.py
mechforge_ai/tests/unit/: test_config.py
