[project]
name = "mechforge-ai"
version = "0.4.0"
description = "机械设计师的本地 AI 工作台 - Gmsh + CalculiX CAE 集成"
readme = "README.md"
license = {text = "MIT"}
authors = [
    {name = "MechForge Team"}
]
requires-python = ">=3.10"
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Science/Research",
    "Intended Audience :: Manufacturing",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Scientific/Engineering :: Physics",
    "Topic :: Scientific/Engineering :: Finite Element Methods",
]
keywords = ["cae", "fem", "gmsh", "calculix", "mesh", "solver", "mechanical"]

dependencies = [
    "rich>=14.0.0",
    "typer>=0.12.0",
    "pyyaml>=6.0",
    "httpx>=0.27.0",
]

[project.optional-dependencies]
work = [
    "gmsh>=4.13.0",
    "pyvista>=0.44.0",
    "trimesh>=4.5.0",
    "textual>=0.60.0",
    "numpy>=1.26.0",
    "scipy>=1.12.0",
]
ai = [
    "openai>=1.30.0",
    "anthropic>=0.30.0",
    "ollama>=0.3.0",
    "chromadb>=0.5.0",
    "sentence-transformers>=2.7.0",
]
dev = [
    "pytest>=8.0.0",
    "pytest-cov>=5.0.0",
    "pytest-asyncio>=0.23.0",
    "ruff>=0.4.0",
    "mypy>=1.10.0",
    "black>=24.0.0",
]
all = [
    "mechforge-ai[work,ai,dev]",
]

[project.scripts]
mechforge-ai = "mechforge_ai.main:main"
mechforge-k = "mechforge_knowledge.cli:main"
mechforge-work = "mechforge_work.work_cli:main"

[project.urls]
Homepage = "https://github.com/yd5768365-hue/mechforge"
Documentation = "https://github.com/yd5768365-hue/mechforge#readme"
Repository = "https://github.com/yd5768365-hue/mechforge.git"
Issues = "https://github.com/yd5768365-hue/mechforge/issues"

[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[tool.setuptools.packages.find]
where = ["packages"]

[tool.setuptools.package-data]
"*" = ["*.yaml", "*.json", "*.md"]

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = ["test_*.py"]
python_classes = ["Test*"]
python_functions = ["test_*"]
addopts = "-v --tb=short"
asyncio_mode = "auto"

[tool.ruff]
line-length = 120
target-version = "py310"
exclude = [
    ".git",
    "__pycache__",
    "*.egg-info",
    "build",
    "dist",
]

[tool.ruff.lint]
select = ["E", "F", "W", "I", "N", "UP", "B"]
ignore = ["E501", "F401"]

[tool.mypy]
python_version = "3.10"
warn_return_any = true
warn_unused_configs = true
ignore_missing_imports = true

[tool.black]
line-length = 120
target-version = ["py310", "py311", "py312"]